detect term string automatically, give user options for change to new term

--- a/design/stylus/main.styl
+++ b/design/stylus/main.styl
@@ -48,3 +48,14 @@ body
   bottom 0
   right 0
   overflow hidden
+#new-term-force
+  display block
+  font-size 8px
+  float right
+  color #28F
+  margin 10px 24px
+  cursor pointer
+  &:hover
+    color #04F
+  &:focus
+    color #04F
