--- a/src/css/main.css
+++ b/src/css/main.css
@@ -849,8 +849,8 @@ ul.icons li [class^="icon-"],ul.icons li [class*=" icon-"] {
 .pane-folder .folder-list a:hover,
 .pane-folder .folder-list a:focus {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #28f), color-stop(1, #0578ff));
-  background: -webkit-linear-gradient(top, #28f 0%, #0578ff 100%);
-  background: linear-gradient(top, #28f 0%, #0578ff 100%);
+  background: -webkit-linear-gradient(top, #28f 0, #0578ff 100%);
+  background: linear-gradient(top, #28f 0, #0578ff 100%);
   -webkit-box-shadow: inset 0 1px 0 #3894ff, inset 0 -1px 0 #006be7;
   box-shadow: inset 0 1px 0 #3894ff, inset 0 -1px 0 #006be7;
   text-shadow: 0 1px 1px #004391;
@@ -899,8 +899,8 @@ body {
 }
 .modal .modal-heading {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #e7e7e7), color-stop(1, #ddd));
-  background: -webkit-linear-gradient(top, #e7e7e7 0%, #ddd 100%);
-  background: linear-gradient(top, #e7e7e7 0%, #ddd 100%);
+  background: -webkit-linear-gradient(top, #e7e7e7 0, #ddd 100%);
+  background: linear-gradient(top, #e7e7e7 0, #ddd 100%);
   -webkit-box-shadow: inset 0 1px 0 #f1f1f1, inset 0 -1px 0 #b1b1b1;
   box-shadow: inset 0 1px 0 #f1f1f1, inset 0 -1px 0 #b1b1b1;
   border-bottom: 1px solid #e7e7e7;
@@ -992,8 +992,8 @@ body {
   -webkit-border-radius: 3px;
   border-radius: 3px;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #28f), color-stop(1, #006be7)) repeat-x #006be7;
-  background: -webkit-linear-gradient(top, #28f 0%, #006be7 100%) repeat-x #006be7;
-  background: linear-gradient(top, #28f 0%, #006be7 100%) repeat-x #006be7;
+  background: -webkit-linear-gradient(top, #28f 0, #006be7 100%) repeat-x #006be7;
+  background: linear-gradient(top, #28f 0, #006be7 100%) repeat-x #006be7;
   -webkit-box-shadow: inset 0 1px 0px #4ea0ff;
   box-shadow: inset 0 1px 0px #4ea0ff;
   text-shadow: 0 -1px 0px #005dca;
@@ -1009,10 +1009,10 @@ body {
 }
 .btn:active {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #006be7), color-stop(1, #0578ff));
-  background: -webkit-linear-gradient(top, #006be7 0%, #0578ff 100%);
+  background: -webkit-linear-gradient(top, #006be7 0, #0578ff 100%);
   -webkit-transition: none;
   transition: none;
-  background: linear-gradient(top, #006be7 0%, #0578ff 100%);
+  background: linear-gradient(top, #006be7 0, #0578ff 100%);
   background-position: 0 0;
 }
 .pane-folder {
@@ -1051,8 +1051,8 @@ body {
 }
 .pane-folder .folder-list .folder-heading {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #3e3a47), color-stop(1, #3a3642));
-  background: -webkit-linear-gradient(top, #3e3a47 0%, #3a3642 100%);
-  background: linear-gradient(top, #3e3a47 0%, #3a3642 100%);
+  background: -webkit-linear-gradient(top, #3e3a47 0, #3a3642 100%);
+  background: linear-gradient(top, #3e3a47 0, #3a3642 100%);
   -webkit-box-shadow: inset 0 1px 0 #4f495a, inset 0 -1px 0 #211f26;
   box-shadow: inset 0 1px 0 #4f495a, inset 0 -1px 0 #211f26;
   text-shadow: 0 -1px 0 #25222a;
@@ -1129,8 +1129,8 @@ body {
   -webkit-transition: height 0.2s linear;
   transition: height 0.2s linear;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #3e3a47), color-stop(1, #3a3642));
-  background: -webkit-linear-gradient(top, #3e3a47 0%, #3a3642 100%);
-  background: linear-gradient(top, #3e3a47 0%, #3a3642 100%);
+  background: -webkit-linear-gradient(top, #3e3a47 0, #3a3642 100%);
+  background: linear-gradient(top, #3e3a47 0, #3a3642 100%);
   -webkit-box-shadow: inset 0 1px 0 #4f495a, inset 0 -1px 0 #211f26;
   box-shadow: inset 0 1px 0 #4f495a, inset 0 -1px 0 #211f26;
 }
@@ -1148,9 +1148,9 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #1a181d), color-stop(1, #211f26));
-  background: -webkit-linear-gradient(top, #1a181d 0%, #211f26 100%);
+  background: -webkit-linear-gradient(top, #1a181d 0, #211f26 100%);
   border: 1px solid #161519;
-  background: linear-gradient(top, #1a181d 0%, #211f26 100%);
+  background: linear-gradient(top, #1a181d 0, #211f26 100%);
   -webkit-box-shadow: inset 0 0 2px #161519;
   box-shadow: inset 0 0 2px #161519;
 }
@@ -1169,8 +1169,8 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #28f), color-stop(1, #0578ff));
-  background: -webkit-linear-gradient(top, #28f 0%, #0578ff 100%);
-  background: linear-gradient(top, #28f 0%, #0578ff 100%);
+  background: -webkit-linear-gradient(top, #28f 0, #0578ff 100%);
+  background: linear-gradient(top, #28f 0, #0578ff 100%);
   -webkit-box-shadow: inset 0 1px 0px #4ea0ff;
   box-shadow: inset 0 1px 0px #4ea0ff;
   border: 1px solid #001b3a;
@@ -1197,8 +1197,8 @@ body {
   border: none;
   border-bottom: 1px solid;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #e6e6e6), color-stop(1, #ddd));
-  background: -webkit-linear-gradient(top, #e6e6e6 0%, #ddd 100%);
-  background: linear-gradient(top, #e6e6e6 0%, #ddd 100%);
+  background: -webkit-linear-gradient(top, #e6e6e6 0, #ddd 100%);
+  background: linear-gradient(top, #e6e6e6 0, #ddd 100%);
   -webkit-box-shadow: inset 0 1px 0 #eee;
   box-shadow: inset 0 1px 0 #eee;
   border-color: #ccc;
@@ -1246,8 +1246,8 @@ body {
 .pane-message .message.is-unread .title::before {
   content: "";
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #28f), color-stop(1, #0578ff));
-  background: -webkit-linear-gradient(top, #28f 0%, #0578ff 100%);
-  background: linear-gradient(top, #28f 0%, #0578ff 100%);
+  background: -webkit-linear-gradient(top, #28f 0, #0578ff 100%);
+  background: linear-gradient(top, #28f 0, #0578ff 100%);
   -webkit-box-shadow: inset 0 1px 1px #7ab8ff;
   box-shadow: inset 0 1px 1px #7ab8ff;
   border: 1px solid #0071f6;
@@ -1255,8 +1255,8 @@ body {
 .pane-message .message.is-stared .title::before {
   content: "";
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f00), color-stop(1, #e60000));
-  background: -webkit-linear-gradient(top, #f00 0%, #e60000 100%);
-  background: linear-gradient(top, #f00 0%, #e60000 100%);
+  background: -webkit-linear-gradient(top, #f00 0, #e60000 100%);
+  background: linear-gradient(top, #f00 0, #e60000 100%);
   -webkit-box-shadow: inset 0 1px 1px #f66;
   box-shadow: inset 0 1px 1px #f66;
   border: 1px solid #d90000;
@@ -1314,8 +1314,8 @@ body {
   vertical-align: middle;
   color: #d2e7ff;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #28f), color-stop(1, #0578ff));
-  background: -webkit-linear-gradient(top, #28f 0%, #0578ff 100%);
-  background: linear-gradient(top, #28f 0%, #0578ff 100%);
+  background: -webkit-linear-gradient(top, #28f 0, #0578ff 100%);
+  background: linear-gradient(top, #28f 0, #0578ff 100%);
   -webkit-box-shadow: inset 0 1px 0px #4ea0ff;
   box-shadow: inset 0 1px 0px #4ea0ff;
   text-shadow: 0 -1px 0px #006be7;
@@ -1324,8 +1324,8 @@ body {
 .pane-message .message .tag.theme-red {
   color: #fbcccc;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #e00), color-stop(1, #d60000));
-  background: -webkit-linear-gradient(top, #e00 0%, #d60000 100%);
-  background: linear-gradient(top, #e00 0%, #d60000 100%);
+  background: -webkit-linear-gradient(top, #e00 0, #d60000 100%);
+  background: linear-gradient(top, #e00 0, #d60000 100%);
   -webkit-box-shadow: inset 0 1px 0px #ff2525;
   box-shadow: inset 0 1px 0px #ff2525;
   text-shadow: 0 -1px 0px #be0000;
@@ -1334,8 +1334,8 @@ body {
 .pane-message .message .tag.theme-magenta {
   color: #fad1e5;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #e91981), color-stop(1, #d41474));
-  background: -webkit-linear-gradient(top, #e91981 0%, #d41474 100%);
-  background: linear-gradient(top, #e91981 0%, #d41474 100%);
+  background: -webkit-linear-gradient(top, #e91981 0, #d41474 100%);
+  background: linear-gradient(top, #e91981 0, #d41474 100%);
   -webkit-box-shadow: inset 0 1px 0px #ed479a;
   box-shadow: inset 0 1px 0px #ed479a;
   text-shadow: 0 -1px 0px #bc1267;
@@ -1344,8 +1344,8 @@ body {
 .pane-message .message .tag.theme-yellow {
   color: #2f2f00;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ee0), color-stop(1, #d6d600));
-  background: -webkit-linear-gradient(top, #ee0 0%, #d6d600 100%);
-  background: linear-gradient(top, #ee0 0%, #d6d600 100%);
+  background: -webkit-linear-gradient(top, #ee0 0, #d6d600 100%);
+  background: linear-gradient(top, #ee0 0, #d6d600 100%);
   -webkit-box-shadow: inset 0 1px 0px #ffff25;
   box-shadow: inset 0 1px 0px #ffff25;
   text-shadow: 0 1px 0px #ffff25;
@@ -1354,8 +1354,8 @@ body {
 .pane-message .message .tag.theme-orange {
   color: #fbe0cc;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #e60), color-stop(1, #d65c00));
-  background: -webkit-linear-gradient(top, #e60 0%, #d65c00 100%);
-  background: linear-gradient(top, #e60 0%, #d65c00 100%);
+  background: -webkit-linear-gradient(top, #e60 0, #d65c00 100%);
+  background: linear-gradient(top, #e60 0, #d65c00 100%);
   -webkit-box-shadow: inset 0 1px 0px #ff8325;
   box-shadow: inset 0 1px 0px #ff8325;
   text-shadow: 0 -1px 0px #be5200;
@@ -1364,8 +1364,8 @@ body {
 .pane-message .message .tag.theme-green {
   color: #d9eed9;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #4a4), color-stop(1, #3d993d));
-  background: -webkit-linear-gradient(top, #4a4 0%, #3d993d 100%);
-  background: linear-gradient(top, #4a4 0%, #3d993d 100%);
+  background: -webkit-linear-gradient(top, #4a4 0, #3d993d 100%);
+  background: linear-gradient(top, #4a4 0, #3d993d 100%);
   -webkit-box-shadow: inset 0 1px 0px #64c164;
   box-shadow: inset 0 1px 0px #64c164;
   text-shadow: 0 -1px 0px #368836;
@@ -1374,8 +1374,8 @@ body {
 .pane-message .message .tag.theme-purple {
   color: #e5cdf2;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #7e08be), color-stop(1, #7107ab));
-  background: -webkit-linear-gradient(top, #7e08be 0%, #7107ab 100%);
-  background: linear-gradient(top, #7e08be 0%, #7107ab 100%);
+  background: -webkit-linear-gradient(top, #7e08be 0, #7107ab 100%);
+  background: linear-gradient(top, #7e08be 0, #7107ab 100%);
   -webkit-box-shadow: inset 0 1px 0px #a40ff5;
   box-shadow: inset 0 1px 0px #a40ff5;
   text-shadow: 0 -1px 0px #650698;
@@ -1384,8 +1384,8 @@ body {
 .pane-message .message .tag.theme-white {
   color: #2f2f2f;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #eee), color-stop(1, #d6d6d6));
-  background: -webkit-linear-gradient(top, #eee 0%, #d6d6d6 100%);
-  background: linear-gradient(top, #eee 0%, #d6d6d6 100%);
+  background: -webkit-linear-gradient(top, #eee 0, #d6d6d6 100%);
+  background: linear-gradient(top, #eee 0, #d6d6d6 100%);
   -webkit-box-shadow: inset 0 1px 0px #f1f1f1;
   box-shadow: inset 0 1px 0px #f1f1f1;
   text-shadow: 0 1px 0px #f1f1f1;
@@ -1394,8 +1394,8 @@ body {
 .pane-message .message .tag.theme-black {
   color: #e0e0e0;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #666), color-stop(1, #5c5c5c));
-  background: -webkit-linear-gradient(top, #666 0%, #5c5c5c 100%);
-  background: linear-gradient(top, #666 0%, #5c5c5c 100%);
+  background: -webkit-linear-gradient(top, #666 0, #5c5c5c 100%);
+  background: linear-gradient(top, #666 0, #5c5c5c 100%);
   -webkit-box-shadow: inset 0 1px 0px #858585;
   box-shadow: inset 0 1px 0px #858585;
   text-shadow: 0 -1px 0px #525252;
@@ -1413,4 +1413,22 @@ body {
   bottom: 0;
   right: 0;
   overflow: hidden;
+}
+#new-term-force {
+  display: block;
+  font-size: 8px;
+  float: right;
+  color: #28f;
+  margin: 10px 24px;
+  cursor: pointer;
+}
+#new-term-force:hover {
+  color: #04f;
+}
+#new-term-force:focus {
+  color: #04f;
+}
+#new-term-modal .red {
+	display: inline-block;
+	color: #C00;
 }
