--- a/src/stylus/_folder.styl
+++ b/src/stylus/_folder.styl
@@ -75,10 +75,20 @@ $loading-height = 50px
     margin 0
     padding 0
     font-size 0.7rem
-    display none
     background darken($folder-background, 40%)
     if not $theme-flat
       box-shadow inset 0 0 4px rgba(#000, 0.5)
+    transition all linear 0.4s
+    max-height 280px
+    overflow hidden
+
+    &.ng-hide
+      max-height 0
+      display block !important
+      transition all linear 0.2s
+    &.ng-hide-add,
+    &.ng-hide-remove
+      display block !important
 
     a
       padding 5px 30px 5px 26px
