--- a/src/stylus/_modal.styl
+++ b/src/stylus/_modal.styl
@@ -1,30 +1,31 @@
 $modal-heading = #DDD
 
-.modal-backdrop
-  display none
+.ng-modal-overlay {
+  /* A dark translucent div that covers the whole screen */
+  position:absolute;
+  z-index:9999;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:#000000;
+  opacity: 0.8;
+}
+.ng-modal-dialog
+  z-index 10000
   position absolute
-  top 0
-  left 0
-  right 0
-  bottom 0
-  background rgba(#000, 0.5)
-
-.modal
-  display none
-  position fixed
-  top -5px
-  opacity 0
+  width 50%
+  top 50%
   left 50%
-  width 500px
-  margin-left (-0.5 * @width)
+  transform translate(-50%, -50%)
+
   background lighten($modal-heading, 50%)
   if not $theme-flat
     border 1px solid darken($modal-heading, 10%)
   border-radius 3px
-  overflow hidden
-  box-shadow 0 1px 5px rgba(#000, 0.5)
+  box-shadow: 4px 4px 80px #000;
 
-  .modal-heading
+  .ng-modal-heading
     clearfix()
     if $theme-flat
       background $modal-heading
@@ -46,7 +47,7 @@ $modal-heading = #DDD
 
       color darken($modal-heading, 60%)
 
-    .modal-close
+    .ng-modal-close
       float right
       color darken($modal-heading, 20%)
       cursor pointer
@@ -65,6 +66,12 @@ $modal-heading = #DDD
       &:hover
         color lighten($modal-heading, 60%)
 
-  .modal-content
-    padding 10px
-
+.ng-modal-dialog-content
+  padding 10px
+  .form-styled
+    .field
+      margin: 0 auto;
+    input
+      box-sizing border-box
+      width 100%
+      padding 10px
