change gui and token

--- a/src/html/partials/item-list.html
+++ b/src/html/partials/item-list.html
@@ -4,7 +4,7 @@
 		<ol id="js-new" class="message-list">
 			<li ng-if="!done" class="message-loading">Loading...</li>
 			<div ng-if="done">
-				<lh-item info="item" ng-repeat="item in items | orderBy:'value':true"> </lh-item>
+				<lh-item ng-model="item" ng-repeat="item in items | orderBy:'value':true"> </lh-item>
 			</div>
 		</ol>
 	</div>
