--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -6,16 +6,16 @@
 
 
 <modal-dialog icon="'icon-signin'" title="'登陆'" show='showModal' width='500px'>
-<form class="form-styled" id="token-form">
+<form class="form-styled" id="token-form" ng-submit="setToken()">
 	请使用登陆网络学堂时的用户名和密码登陆
 	<div class="field">
-		<input id="token-username" type="text" placeholder="用户名">
+		<input id="token-username" type="text" placeholder="用户名" ng-model="token['username']" required>
 	</div>
 	<div class="field">
-		<input id="token-password" type="password" placeholder="密码">
+		<input id="token-password" type="password" placeholder="密码" ng-model="token['password']" required>
 	</div>
 	<div class="field">
-		<input id="token-submit" type="submit" class="btn" value="登录">
+		<input id="token-submit" ng-disabled="token['loading']" type="submit" class="btn" value="登录">
 	</div>
 </form>
 </modal-dialog>
