--- a/src/stylus/_modal.styl
+++ b/src/stylus/_modal.styl
@@ -1,16 +1,15 @@
 $modal-heading = #DDD
 
-.ng-modal-overlay {
-  /* A dark translucent div that covers the whole screen */
-  position:absolute;
-  z-index:9999;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background-color:#000000;
-  opacity: 0.8;
-}
+.ng-modal-overlay
+  position absolute
+  z-index 9999
+  top 0
+  left 0
+  width:100%
+  height 100%
+  background-color #000
+  opacity 0.7
+
 .ng-modal-dialog
   z-index 10000
   position absolute
