adjust font fallback order & add fallback font for OSX

--- a/src/asset/css/detail.css
+++ b/src/asset/css/detail.css
@@ -2,7 +2,7 @@ html {
   background: #ECECEC;
 }
 body, pre {
-	font: 16px / 1.5 "微软雅黑", Helvetica, Serif;
+  font: 16px / 1.5 Helvetica, "Microsoft Yahei", "Hiragino Sans GB", sans;
   color: #222;
 }
 .page-wrap, .title-wrap {
