--- a/src/asset/css/welcome.css
+++ b/src/asset/css/welcome.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-	font: 16px / 1.5 "微软雅黑", Helvetica, Serif;
+  font: 16px / 1.5 Helvetica, "Microsoft Yahei", "Hiragino Sans GB", sans;
 	text-align:center;
 }
 
