--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -13,6 +13,17 @@
     height: 18px;
 }
 
+.card_list_header {
+    width: 100%;
+    height: 15px;
+    text-align: center;
+    background: rgb(183, 183, 183);
+}
+
+.card_list_header_text {
+    font-size: 20px;
+}
+
 .subfunc_list {
     padding-left: 10px;
 }
