--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -8,7 +8,7 @@
     padding-bottom: 8px !important;
 }
 
-.course_list_item_text {
+.course_list_item_text, .settings_list_item_text {
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
