Fix typing error, adjust card list background
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -31,11 +31,11 @@
 .card_list {
   max-height: 100%;
   overflow-y: auto;
-  overflow-x: none;
+  overflow-x: hidden;
 }
 
 .card_list_inner {
-  background: white;
+  background: #f6f6f6;
 }
 
 .card_list_header {
