Update doc for card filter
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/src/css/list.css
+++ b/src/css/list.css
@@ -51,6 +51,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    font-size: larger;
 }
 
 .card_list_header_grow {
