--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,33 +1,124 @@
-
-.pane_folder {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 270px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    opacity: 1;
-    /*background: #25222a;*/
-    transition: opacity 0.3s linear;
+.app_bar_btn {
+  width: 48px;
+  margin-left: -8px !important;
 }
 
-.pane_message {
-    position: absolute;
-    top: 0;
-    left: 270px;
-    bottom: 0;
-    width: 400px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    border-right: 1px solid #ccc;
-    background: #f6f6f6;
-    opacity: 1;
-    transition: opacity 0.3s linear;
+.sidebar {}
+
+.sidebar_wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 670px;
+  height: 100%; /* Relatives to body */
 }
 
-.pane_hidden {
-    opacity: 0;
+.sidebar_content {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+}
+
+.sidebar_component {
+  height: 100%;
+  overflow: hidden;
+}
+
+.sidebar_folder {
+  overflow-y: auto;
+  width: 270px;
+}
+
+.sidebar_cards {
+  width: 400px;
+  background: #f6f6f6;
+  border-right: 1px solid #ccc;
+  border-left: 1px solid rgba(0,0,0,.12);
+  box-sizing: border-box;
+}
+
+.sidebar_header {
+  border-bottom: rgba(0,0,0,.12) 1px solid;
+}
+
+.sidebar_header_left {
+  width: 270px;
+  box-sizing: border-box;
+  display: inline-flex;
+}
+
+.sidebar_header_right {
+  width: 400px;
+  box-sizing: border-box;
+  border-left: 1px solid rgba(0,0,0,.12);
+  display: inline-flex;
+
+  overflow: hidden;
+}
+
+.sidebar_header_content {
+  display: flex;
+  border-right: 1px solid #ccc;
+}
+
+.sidebar_cardlist_name {
+  flex: 1;
+  display: block;
+
+  transition: transform .2s ease, opacity .2s ease;
+}
+
+.sidebar_filter_group {
+  margin-right: -8px;
+  width: 48px;
+  display: flex;
+  align-items: center;
+
+  transition: transform .2s ease;
+}
+
+.sidebar_filter_shown .sidebar_cardlist_name {
+  transform: translateX(-320px); /* 400 - 24*2 - 48 + 8*2 = 320 */
+  opacity: 0;
+}
+
+.sidebar_filter_shown .sidebar_filter_group {
+  transform: translateX(-320px);
+}
+
+.filter_input {
+  padding-left: 8px;
+  width: 312px;
+
+  transition: opacity .2s ease;
+  opacity: 0;
+}
+
+.filter_input_inner {
+  width: 304px;
+}
+
+.filter_btn {
+  width: 48px;
+}
+
+.filter_icon {
+  width: 24px !important;
+  height: 24px;
+
+  opacity: 0;
+  transition: opacity .2s ease;
+}
+
+.filter_icon:last-child {
+  margin-left: -24px;
+}
+
+.filter_icon_shown {
+  opacity: 1;
+}
+
+.sidebar_filter_shown .filter_input {
+  opacity: 1;
 }
 
 .pane_content {
@@ -39,12 +130,15 @@
     min-width: 700px;
     overflow-x: auto;
     overflow-y: auto;
-    transition: left 0.3s linear;
     background-color: #eee;
+
+    transition: left 225ms cubic-bezier(0, 0, 0.2, 1) 0ms
 }
 
 .pane_fullscreen {
     left: 0;
+
+    transition: left 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms
 }
 
 .progress_area {
@@ -70,12 +164,4 @@
 .snack_bar_text {
     display: flex;
     align-items: center;
-}
-
-.toggle_button {
-    height: 0;
-    width: 0;
-    position: fixed;
-    margin: 8px;
-    z-index: 1000;
 }
