Style tweaks and a master title placeholder

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -46,6 +46,10 @@
   display: inline-flex;
 }
 
+.sidebar_master_title {
+  margin-left: 8px !important;
+}
+
 .sidebar_header_right {
   width: 400px;
   box-sizing: border-box;
