Update dependency, find progress bar back
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -146,8 +146,8 @@
 }
 
 .progress_area {
-    z-index: 100;
-    position: fixed;
+    z-index: 1500;
+    position: absolute;
     top: -1px;
     left: 0;
     width: 100%;
