--- a/src/css/page.css
+++ b/src/css/page.css
@@ -22,6 +22,7 @@
 .ignore_setting_container {
     width: fit-content;
     margin: 20px auto;
+    min-width: 700px;
 }
 
 .ignore_setting_reset_button {
@@ -35,8 +36,7 @@
 
 .content_detail_lines {
     text-align: left;
-    margin: 10px 100px;
-    max-width: 700px;
+    margin: 10px 80px;
 }
 
 .content_detail_lines a {
@@ -55,9 +55,32 @@
 
 .content_detail_content {
     text-align: left;
-    margin: 10px 100px;
+    margin: 10px 80px;
     font-size: 1.2em;
     padding: 10px 20px;
     white-space: pre-wrap;
 }
 
+@media (max-width: 1280px) {
+    .content_detail_lines, .content_detail_content {
+        margin: 10px 40px;
+    }
+    .content_detail_title {
+        font-size: 25px;
+    }
+    .content_detail_line {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .content_detail_lines, .content_detail_content {
+        margin: 10px 15px;
+    }
+    .content_detail_title {
+        font-size: 20px;
+    }
+    .content_detail_line {
+        font-size: 12px;
+    }
+}
