Add error catching for App, bump to v4.1.2
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,12 @@
   margin-left: -8px !important;
 }
 
+.app_error_text {
+    text-align: center;
+    margin: 10px auto !important;
+    display: block !important;
+}
+
 .sidebar {}
 
 .sidebar_wrapper {
