--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,15 +22,16 @@
   display: flex;
   flex-direction: row;
   flex: 1;
+  overflow-y: hidden;
 }
 
 .sidebar_component {
   height: 100%;
   overflow: hidden;
+  overflow-y: auto;
 }
 
 .sidebar_folder {
-  overflow-y: auto;
   width: 270px;
 }
 
