css: enlarge file preview

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -62,6 +62,9 @@
 
 .content_detail_preview {
     margin: 10px 80px;
+    width: 620px;
+    height: 392px;
+    border: none;
     width: -webkit-fill-available;
     height: -webkit-fill-available;
 }
