Fix height problem in firefox
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -65,6 +65,7 @@
     border: none;
     width: -webkit-fill-available;
     width: -moz-available;
+    min-height: 600px;
     height: -webkit-fill-available;
     height: -moz-available;
 }
