Remove preact, add ChangeSemesterDialog
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -8,6 +8,8 @@
     background-color: rgba(0,0,0,.3) !important;
     color: inherit !important;
     font-size: 1rem !important;
+    margin-left: 0 !important;
+    margin-left: 0 !important;
 }
 
 .card_first_line {
