--- a/src/css/main.css
+++ b/src/css/main.css
@@ -62,6 +62,15 @@
 
 .sidebar_master_title {
   margin-left: 8px !important;
+  margin-right: 8px !important;
+}
+
+.sidebar_master_notify_icon {
+  width: 8px !important;
+  height: 8px !important;
+  font-size: 1.2em !important;
+  padding: 8px !important;
+  color: darkred !important;
 }
 
 .sidebar_header_right {
@@ -193,4 +202,9 @@
     height: 100%;
     width: 100%;
     border-width: 0;
+}
+
+.form_control {
+    margin: 10px 0 !important;
+    min-width: 150px !important;
 }
