Parallelize data fetching, allowing partial failure
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -191,6 +191,10 @@
     background-color: #1976d2 !important;
 }
 
+.snack_bar_warning {
+  background-color: #ff9800 !important;
+}
+
 .snack_bar_text {
     display: flex;
     align-items: center;
