--- a/src/css/main.module.css
+++ b/src/css/main.module.css
@@ -155,6 +155,8 @@
 
 .pane_content {
   position: absolute;
+  display: flex;
+  flex-direction: column;
   top: 0;
   left: 671px;
   bottom: 0;
@@ -186,6 +188,11 @@
   top: -1px;
   left: 0;
   width: 100%;
+}
+
+.web_frame_wrapper {
+  flex-grow: 1;
+  position: relative;
 }
 
 .web_frame {
