chore: replace fontawesome with unplugin-icons

--- a/src/css/list.module.css
+++ b/src/css/list.module.css
@@ -21,6 +21,11 @@
   text-overflow: ellipsis;
 }
 
+.list_title_header {
+  display: flex;
+  align-items: center;
+}
+
 .list_title {
   margin-left: 10px;
 }
