--- a/src/css/card.module.css
+++ b/src/css/card.module.css
@@ -10,6 +10,7 @@
   font-size: 1rem !important;
   margin-left: 0 !important;
   margin-left: 0 !important;
+  padding: 8px;
 }
 
 .card_first_line {
